# compto

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  package-lock.json  package.json  rustfmt.toml
comptoken/: Cargo.toml
comptoken-transfer-hook/: Cargo.toml
comptoken-transfer-hook/src/: comptoken-transfer-hook.rs  verify_accounts.rs
comptoken-utils/: Cargo.toml
comptoken-utils/src/: comptoken_utils.rs  user_data.rs  verify_accounts.rs
comptoken/src/: comptoken.rs  constants.rs  verify_accounts.rs
src/: HashStorage.md  README.md  blockchain.rs  comptoken.rs  comptoken_generated.rs  comptoken_proof.rs  constants.rs  generated.rs  global_data.rs  hash_storage.rs  mintblock.rs  static_data.rs  user_data.rs  verify_accounts.rs
src/global_data/: daily_distribution_data.rs  mod.rs  valid_blockhashes.rs
src/user_data_storage/: HashStorage.md  hash_storage.rs  mod.rs
src/user_data_storage/documentation/: HashStorage.md
test/: common.py  component_tests.py  full_deploy_test.py
test/compto-test-client/: accounts.js  assert.js  block.ts  common.js  common.ts  comptoken_proof.js  comptoken_proof.ts  initialize_comptoken_program.js  package-lock.json  test_client.js  test_createUserDataAccount.js  test_dailyDistributionEvent.js  test_getOwedComptokens.js  test_getValidBlockhashes  test_get_owed_comptokens.js  test_initializeComptokenProgram.js  test_mint.js  test_proofSubmission.js
test/compto-test-client/comptoken-tests/: dailyDistributionEvent.js  mint.js  proofSubmission.js
test/compto-test-client/transfer-hook-tests/: execute.js  (+1 more)
