[package]
name = "comptoken"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bs58 = "0.5.1"
hex = "0.4.3"
solana-program = "*"
spl-discriminator = "0.3.0"
spl-token-2022 = { version="4.0.0", features=["no-entrypoint"] }
spl-transfer-hook-interface = "0.7.0"

[dev-dependencies]
hex-literal = "0.4.1"

[lib]
path = "src/comptoken.rs"
name = "comptoken"
crate-type = ["cdylib", "lib"]

[features]
testmode = []
